# SOEM

./: CMakeLists.txt
oshw/linux/: nicdrv.c  nicdrv.h
soem/: ethercatmain.c  ethercatmain.h  ethercattype.h
test/linux/simple_test/: simple_test.c
